SERVER-27891 Disable writeConcern support for reIndex