jstests/libs/override_methods/set_read_and_write_concerns.js
@@ -92,7 +92,6 @@
             "mergeAuthzCollections",
             "moveChunk",
             "movePrimary",
-            "reIndex",
             "remove",
             "renameCollection",
             "resvChunkStart",
